Fix append on reload and images overlapping with text

--- a/autoleague/resources/overlay/versus_logos.css
+++ b/autoleague/resources/overlay/versus_logos.css
@@ -23,8 +23,8 @@ body {
 }
 
 .bot-herald:nth-child(2) {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 70px;
+    margin-right: 70px;
 }
 
 .bot-herald {
@@ -42,7 +42,7 @@ body {
     font-family: "Helvetica", "Verdana", sans-serif;
     font-style: italic;
     position: absolute;
-    bottom: -30px;
+    bottom: -36px;
     padding-right: 8px;
     padding-left: 8px;
     margin-bottom: 0;
@@ -63,5 +63,5 @@ body {
 
 #versus-container>img {
     width: 200px;
-    margin-top: 280px;
+    margin-top: 310px;
 }
